--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN = MTE5Njg3MzUwNjQ1ODE4NTgxOA.GwXc9b.aUCDua9tYhvn54HO5nx6yiwQC-i-ed48SRGN18
-HYPIXEL_API_KEY = c15407a8-4e9c-4991-b205-8a53a7f9e520
+DISCORD_TOKEN = //Discord token would go here
+HYPIXEL_API_KEY = //Hypixel API key would go here
